fixed watched_movies post route/updated home page

--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -10,7 +10,7 @@
         </p>
     </section>
     <section class='home-section'>
-        <h1>Routes of each table:</h1>
+        <h1>Link to each table:</h1>
         <h2><a href='/admin/users'>Users</a></h2>
         <h2><a href='/admin/movies'>Movies</a></h2>
         <h2><a href='/admin/reviews'>Reviews</a></h2>
